# openjck

./: README.md  basic_agent.py  collector.py  decorators.py  pyproject.toml  server.py  storage.py
.github/workflows/: ci.yml  deploy-site.yml
agentrace/: __init__.py  cli.py  collector.py  decorators.py  server.py  storage.py
agentrace-site/: astro.config.mjs
agentrace/integrations/: __init__.py  langchain.py
agentrace/ui/: index.html
examples/: basic_agent.py  dashboard_demo.py
openjck/: __init__.py  cli.py  client.py  collector.py  decorators.py  intelligence.py  server.py  storage.py
openjck-npm/: .npmignore  PUBLISHING.md  README.md  SHIPPING_CHECKLIST.md  package-lock.json  package.json
openjck-npm/.github/workflows/: ci.yml  publish.yml
openjck-npm/dashboard/: err.txt  err8.txt  package-lock.json  package.json  tailwind.config.js  vite.config.js
openjck-npm/dashboard/src/: App.jsx  index.css
openjck-npm/dashboard/src/lib/: utils.js
openjck-npm/src/: db.js  server.js  welcome.js
openjck-npm/src/commands/: clear.js  traces.js  ui.js
openjck-npm/src/ui/: index.html
openjck-site/: astro.config.mjs  netlify.toml  package-lock.json  package.json  vercel.json
openjck-site/public/: robots.txt
openjck-site/scripts/: generate-og.js
openjck-site/src/: og-image.html
openjck-site/src/components/: BaseHead.astro
openjck-site/src/pages/: index.astro
openjck-site/src/styles/: custom.css
openjck/integrations/: langchain.py
openjck/ui/: index.html
scripts/: generate_agentrace_docs_pdf.py
tests/: test_intelligence.py
ui/: index.html
(+35 files in other folders)
