[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openjck"
version = "0.3.2"
description = "Visual debugger for AI agents. See every step, every decision, every failure."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

keywords = ["ai", "agents", "debugging", "observability", "llm", "tracing", "langchain", "crewai"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Debuggers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core: zero heavy dependencies
dependencies = []

[project.optional-dependencies]
server = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]
all = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]

[project.scripts]
openjck = "openjck.cli:main"

[project.urls]
Homepage = "https://github.com/RavaniRoshan/openjck"
Documentation = "https://github.com/RavaniRoshan/openjck#readme"
Issues = "https://github.com/RavaniRoshan/openjck/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["openjck*"]

[tool.setuptools.package-data]
openjck = ["ui/*.html", "ui/*.js", "ui/*.css"]

[tool.ruff]
line-length = 100
target-version = "py310"
